@@ -33,6 +33,7 @@ tar="/bin/tar"
 rsync="/usr/bin/rsync"
 mkisofs="/usr/bin/mkisofs"
 growisofs="/usr/bin/growisofs"
+dvdrwformat="/usr/bin/dvd+rw-format"
 cdrecord="/usr/bin/cdrecord"
 bmu="/usr/bin/backup-manager-upload"
 lockfile="/var/run/backup-manager.pid"
