@@ -1,5 +1,12 @@
 2006-01-17  Alexis Sukrieh  <sukria@backup-manager.org>
 
+	* backup-manager:
+	  + added the path to dvd+rw-format
+	* lib/actions.sh:
+	  + now blank the DVD media explicitly before burning data.
+
+2006-01-17  Alexis Sukrieh  <sukria@backup-manager.org>
+
 	* lib/files.sh:
 	  + Applied patch from Michel Grentzinger <mic.grentz@online.fr> for
 	  enhancing the way space occupation is computed (bug #22).
